# topic_model

./: .gitignore  CMakeLists.txt  README.md  main.c  main.h.in  parameters.c  parameters.h  rsm.c  rsm.h  utils.c  utils.h
.cache/clangd/index/: main.c.5089EDDE5D795752.idx
include/topic_model/: rsm.h  utils.h
lib/: CMakeLists.txt  rsm.c
libs/: CMakeLists.txt  dataset.c  dataset.h  parameters.c  parameters.h  pcg_basic.c  ran3.c  ran3.h  random_lib.c  random_lib.h  rsm.c  rsm.h
libs/src/: CMakeLists.txt
src/: CMakeLists.txt
